=================
Changes for crash
=================

Unreleased
==========

 - added ``--version`` to cli interface to show crash version and exit

2015/04/03 0.11.5
=================

 - Fixed misconfigured logging that caused warning logs being printed
   to stderr.

 - Fixed an issue with pasting multi-line statements from clipboard.

 - Added argcomplete support. If argcomplete is available bash argument
   completion will work if argcomplete is loaded.

2015/03/01 0.11.4
=================

 - Fix: print stacktrace when crash is launched in verbose mode

2015/02/24 0.11.3
=================

 - Fix: query duration was rounded incorrectly to second precision

2015/02/11 0.11.2
=================

 - Fix: do not print ``rows affected`` in status message
   of DDL statements and other statements that do not affect rows

2015/02/03 0.11.1
=================

 - Fix: return complete sql exception message

2015/02/03 0.11.0
=================

 - added ``--format`` command line option
   to support different response output formats such as
   ``tabular``, ``raw``, ``json``, ``csv`` and ``mixed``

 - BREAKING CHANGE
   the ``CONNECT <host>`` client command was changed to ``\connect <host>``
   see documentation for further details

 - alternative cli implementation using prompt_toolkit

 - added coloured printing when in interactive shell

2014/10/27 0.10.3
=================

 - require crate-python 0.12.3 to get support for the iterator protocol
   on cursor

 - Fixed an error that caused crash to crash on non posix platforms.

2014/10/02 0.10.2
=================

 - require crate-python 0.12.1 so crash sends the correct Accept Header when
   requesting crate

2014/09/19 0.10.1
=================

 - increased crate-python requirement to 0.11.2 for the improved failover
   mechanism

2014/09/02 0.10.0
=================

 - crate server version information is now also included in the connect-output.

 - improved formatting of field lists in docs