@@ -5,6 +5,8 @@ Changes for crash
 Unreleased
 ==========
 
+ - Attempting to use unknown command now results in an error
+
  - added ``--version`` to cli interface to show crash version and exit
 
 2015/04/03 0.11.5
